--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Buy me coffee</title>
 </head>
 <body>
-    <img src="https://cdn.jsdelivr.net/gh/ruanzhengyang/upic@main/uPic/pay.svg" alt="SVG Image">
+    <img src="https://cdn.jsdelivr.net/gh/ruanzhengyang/upic@main/uPic/pay1.svg" alt="SVG Image">
 </body>
 </html>
